search input eklendi ve düzgün çalışıyor

--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -6,6 +6,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  flex-wrap: wrap;
 }
 .footer-contact {
   width: 100%;
