--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,23 @@
+.dark-light {
+  position: absolute;
+  right: 2%;
+  top: 10%;
+  z-index: 1;
+  background-color: rgb(202, 202, 202);
+  width: 45px;
+  height: 45px;
+  font-size: 30px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+/* Açık Tema */
+body.light {
+  background-color: white;
+}
 
+/* Koyu tema */
+body.dark {
+  background-color: #000000;
+}
